--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demerit Tracker</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="papaparse.min.js"></script>
 </head>
 <body>
     <h1>Demerit Tracker</h1>
+    <label for="startdate">Start Date:</label>
+    <input class="form-control" id = "startdate" type="date">
+    <label for="enddate">End Date:</label>
+    <input class="form-control" id = "enddate" type="date">
     <table id="demeritsTable">
         <thead>
             <tr>
