--- a/index.html
+++ b/index.html
@@ -7,13 +7,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="papaparse.min.js"></script>
+    
 </head>
 <body>
     <h1>Demerit Tracker</h1>
     <label for="startdate">Start Date:</label>
-    <input class="form-control" id = "startdate" type="date">
-    <label for="enddate">End Date:</label>
-    <input class="form-control" id = "enddate" type="date">
+<input class="form-control" id="startdate" type="date">
+<label for="enddate">End Date:</label>
+<input class="form-control" id="enddate" type="date">
+
+<script>
+  // Get today's date
+  const today = new Date();
+
+  // Set the end date to today
+  const endDate = today.toISOString().split('T')[0];
+  document.getElementById('enddate').value = endDate;
+
+  // Set the start date to 5 days before today
+  const startDate = new Date();
+  startDate.setDate(today.getDate() - 5);
+  document.getElementById('startdate').value = startDate.toISOString().split('T')[0];
+</script>
+
     <table id="demeritsTable">
         <thead>
             <tr>
